# copilot-usage_tui

./: Cargo.toml  README.md  check-install.sh  install.sh  quick-install.sh  waybar-config-example.json  waybar-style-example.css
src/: api.rs  cache.rs  cli.rs  config.rs  main.rs  models.rs  themes.rs  ui.rs  waybar.rs
src/ui/: async_handler.rs  events.rs  layout.rs  mod.rs  state.rs  styles.rs
src/ui/components/: cache_info_dialog.rs  command_menu.rs  dialogs.rs  error_dialog.rs  header.rs  help_dialog.rs  loading_dialog.rs  mod.rs  model_table.rs  theme_selector.rs  usage_overall.rs
